--- a/config/pipeline.yaml
+++ b/config/pipeline.yaml
@@ -4,6 +4,7 @@ dataset:
 paths:
   cache_csv: data/cache/german_credit_raw.csv
   ingestion_metadata_json: artifacts/ingestion/ingestion_metadata.json
+  dq_report_json: artifacts/data_quality/data_quality_report.json
 
 run:
   random_seed: 42
