Models Training + Versioned Artifacts + Scores to DuckDB Completed

--- a/config/pipeline.yaml
+++ b/config/pipeline.yaml
@@ -6,6 +6,7 @@ paths:
   ingestion_metadata_json: artifacts/ingestion/ingestion_metadata.json
   dq_report_json: artifacts/data_quality/data_quality_report.json
   duckdb_path: warehouse/credit_risk.duckdb
+  models_dir: artifacts/models
 
 run:
   random_seed: 42
